--- a/index.html
+++ b/index.html
@@ -1,63 +1,83 @@
+<!--
+  © 2025 datsforge
+  All rights reserved. Do not distribute without permission.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>datsforge.com</title>
-  <link rel="icon" type="image/png" href="favicon.png">
-  <style>
-    body {
-      background-color: #0f0f0f;
-      color: #f8f8f8;
-      font-family: 'Courier New', monospace;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: left;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>datsforge.com</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <style>
+        body {
+          background-color: #0f0f0f;
+          color: #f8f8f8;
+          font-family: 'Courier New', monospace;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+          margin: 0;
+          text-align: left;
+        }
+
+        .container {
+          display: flex;
+          align-items: center;
+          gap: 20px;
+          padding: 0 20px;
+        }
+
+        img {
+          width: 64px;
+          height: 64px;
+        }
+
+        h1 {
+          font-size: 2em;
+          margin: 0.2em 0;
+        }
+
+        p {
+          font-size: 1em;
+          opacity: 0.75;
+          margin: 0.2em 0;
+        }
+
+        .tagline {
+          font-style: italic;
+          font-size: 0.95em;
+          color: #ff914d;
+          margin-top: 1em;
+        }
+
+        footer {
+          position: absolute;
+          bottom: 10px;
+          width: 100%;
+          text-align: center;
+          font-size: 0.75em;
+          color: #888;
+          opacity: 0.5;
     }
 
-    .container {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      padding: 0 20px;
-    }
 
-    img {
-      width: 64px;
-      height: 64px;
-    }
-
-    h1 {
-      font-size: 2em;
-      margin: 0.2em 0;
-    }
-
-    p {
-      font-size: 1em;
-      opacity: 0.75;
-      margin: 0.2em 0;
-    }
-
-    .tagline {
-      font-style: italic;
-      font-size: 0.95em;
-      color: #ff914d;
-      margin-top: 1em;
-    }
-  </style>
+    </style>
 </head>
 <body>
-  <div class="container">
+<div class="container">
     <img src="datsforge_64x64.png" alt="datsforge logo">
     <div>
-      <h1>Welcome to datsforge!</h1>
-      <p>Forge lighted. Ideas brewing. Stay tuned.</p>
-      <p class="tagline">"Not just built, forged!"</p>
+        <h1>Welcome to datsforge!</h1>
+        <p>Forge lighted. Ideas brewing. Stay tuned.</p>
+        <p class="tagline">"Not just built, forged!"</p>
     </div>
-  </div>
+</div>
+<footer>
+    <p>© 2025 datsforge. All rights reserved.</p>
+</footer>
 </body>
 </html>
+
 
