--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>datsforge.com</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="assets/images/icons/favicon.png">
     <style>
         body {
           background-color: #0f0f0f;
@@ -65,7 +65,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="datsforge_64x64.png" alt="datsforge logo">
+    <img src="assets/images/datsforge_64x64.png" alt="datsforge logo">
     <div>
         <h1>Welcome to datsforge!</h1>
         <p>Forge lighted. Ideas brewing. Stay tuned.</p>
