testing new layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,19 +13,31 @@
     <link rel="icon" type="image/png" href="assets/images/icons/favicon.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-<main class="container">
-    <img src="assets/images/datsforge_64x64.png" alt="datsforge logo" role="img">
-    <div>
-        <h1>Welcome to datsforge!</h1>
-        <p>Forge lighted. Ideas brewing. Stay tuned.</p>
-        <p class="tagline">"Not just built, forged!"</p>
-    </div>
-</main>
-<footer>
-    <p>© 2025 datsforge. All rights reserved.</p>
-</footer>
+    <header>
+        <nav>
+            <a href="index.html" class="logo">
+                <img src="assets/images/datsforge_64x64.png"
+                    alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
+                <span>datsforge</span>
+            </a>
+        </nav>
+        <div class="header-banner">
+             <div class="header-content">
+                <h1>Welcome to datsforge!</h1>
+                <p>Forge lighted. Ideas brewing. Stay tuned.</p>
+                <p class="tagline">"Not just built, forged!"</p>
+            </div>
+        </div>
+    </header>
+
+    <!-- <main>
+    </main> -->
+
+    <footer>
+        <p>© 2025 datsforge. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
-
-
