added auto-hide nav bar

--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
     <title>datsforge.com</title>
     <link rel="icon" type="image/png" href="assets/images/icons/favicon.png">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/variables.css">
+    <link rel="stylesheet" href="assets/css/nav.css">
 </head>
 
 <body>
+    <nav>
+        <a href="index.html" class="logo">
+            <img src="assets/images/datsforge_64x64.png"
+                alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
+            <span>datsforge</span>
+        </a>
+        <div class="nav-links">
+            <a href="">Game Projects</a>
+            <a href="">App Projects</a>
+            <a href="">Gallery</a>
+            <a href="">About</a>
+        </div>
+    </nav>
+
     <header>
-        <nav>
-            <a href="index.html" class="logo">
-                <img src="assets/images/datsforge_64x64.png"
-                    alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
-                <span>datsforge</span>
-            </a>
-        </nav>
         <div class="header-banner">
-             <div class="header-content">
+            <div class="header-content">
                 <h1>Welcome to datsforge!</h1>
                 <p>Forge lighted. Ideas brewing. Stay tuned.</p>
                 <p class="tagline">"Not just built, forged!"</p>
@@ -32,12 +41,42 @@
         </div>
     </header>
 
-    <!-- <main>
-    </main> -->
+    <main>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore commodi harum est quibusdam possimus atque?
+            Blanditiis in similique at ullam fugit voluptas alias incidunt ex, quasi a vel dolores adipisci.</p>
+    </main>
 
     <footer>
         <p>© 2025 datsforge. All rights reserved.</p>
     </footer>
 </body>
+
+<script src="assets/js/nav-scroll.js"></script>
 
 </html>
