--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -1,16 +1,35 @@
+<div class="navbar-main" >
+    <a href="/index.html" class="logo">
+        <img src="/assets/images/datsforge_64x64.png"
+            alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
+        <span >datsforge</span>
+    </a>
 
-<a href="/index.html" class="logo">
-    <img src="/assets/images/datsforge_64x64.png"
-        alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
-    <span>datsforge</span>
-</a>
+    <input type="checkbox" id="menu-toggle-main" class="menu-toggle">
+    <label for="menu-toggle-main" class="menu-icon">&#9776;</label>
 
-<input type="checkbox" id="menu-toggle" class="menu-toggle">
-<label for="menu-toggle" class="menu-icon">&#9776;</label>
+    <ul class="nav-links">
+        <li><a href="">Game Projects</a></li>
+        <li><a href="">App Projects</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="/assets/html/about.html">About</a></li>
+    </ul>
+</div>
 
-<ul class="nav-links">
-    <li><a href="">Game Projects</a></li>
-    <li><a href="">App Projects</a></li>
-    <li><a href="">Gallery</a></li>
-    <li><a href="/assets/html/about.html">About</a></li>
-</ul>
+<div class="navbar-legal">
+    <a href="/index.html" class="logo">
+        <img src="/assets/images/datsforge_64x64.png"
+            alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
+        <span>datsforge</span>
+    </a>
+
+    <input type="checkbox" id="menu-toggle-legal" class="menu-toggle">
+    <label for="menu-toggle-legal" class="menu-icon">&#9776;</label>
+
+    <ul class="nav-links">
+        <li><a href="">Game Projects</a></li>
+        <li><a href="">App Projects</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="/assets/html/about.html">About</a></li>
+    </ul>
+</div>
