--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -33,3 +33,20 @@
         <li><a href="/assets/html/about.html">About</a></li>
     </ul>
 </div>
+
+<div class="navbar-terms-privacy">
+   
+    <a href="/index.html" class="logo">
+        <img src="/assets/images/datsforge_64x64.png"
+            alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
+        <span>datsforge</span>
+    </a>
+
+    <input type="checkbox" id="menu-toggle-terms-privacy" class="menu-toggle">
+    <label for="menu-toggle-terms-privacy" class="menu-icon">&#9776;</label>
+
+    <ul class="nav-links">
+        <li><a href="">Terms of Use</a></li>
+        <li><a href="">Privacy Policy</a></li>
+    </ul>
+</div>
